Integrated dps3xx library

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=DPS368 Barometric Pressure Sensor
+name=DPS3xx Barometric Pressure Sensor
 version=1.0.0
 author=Infineon Technologies
 maintainer=Infineon Technologies <www.infineon.com>
-sentence=This library provides an interface for Infineon's DPS368 pressure sensor.
+sentence=This library provides an interface for Infineon's DPS3xx pressure sensor.
 paragraph=The DPS series are highly-sensitive pressure sensors (with temperature compensation) that can be connected via SPI or I2C.
 category=Sensors
-url=https://www.infineon.com/cms/en/product/sensor/barometric-pressure-sensor-for-consumer-applications/dps368/
+url=https://www.infineon.com/cms/en/product/sensor/barometric-pressure-sensor-for-consumer-applications/dps3xx/
 architectures=*
