minor typo fixes

--- a/library.properties
+++ b/library.properties
@@ -1,8 +1,8 @@
-name=XENSIV DigitalPressureSensor
+name=XENSIV Digital Pressure Sensor
 version=1.0.0
 author=Infineon Technologies
 maintainer=Infineon Technologies <www.infineon.com>
 sentence=Arduino library for the Infineon XENSIV(TM) Digital Pressure Sensors (DPS3xx).
-paragraph=The XENSIV(TM) barometric pressure sensor series (DPS3xx) offers excellent pressure noise performance and high stability with temperature.
+paragraph=The XENSIV(TM) barometric pressure sensor series (DPS3xx) offers excellent pressure noise performance and high stability over temperature.
 category=Sensors
 url=https://github.com/Infineon/arduino-xensiv-dps3xx
